# devin-tests

backend/: fly.toml  project_management.db  pyproject.toml
backend/app/: .env  __init__.py  base.py  crud.py  database.py  main.py  models.py  schemas.py
frontend/: .env  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: TaskView.tsx
frontend/src/types/: index.ts
